--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </li>
       </ol>
       <p>
-        Now, let's consider the term "Sovereign-T" where 'T' stands for
+        Now, let's consider the term <em><strong>"Sovereign-T"</strong></em> where <em><strong>'T'</strong></em> stands for
         <strong>Trust</strong>, <strong>Transparency</strong>, and
         <strong>Total Autonomy:</strong>
       </p>
