--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
   </head>
   <body>
     <header>
-      <h1>Sovereign-T Protocol : A brief introduction</h1>
+      <h1>Sovereign-T<sup>3</sup> Protocol : A brief introduction</h1>
     </header>
 
     <section>
       <h2>Abstract</h2>
       <p>
-        Sovereign-T Protocol emerges as a groundbreaking blockchain solution
+        Sovereign-T<sup>3</sup> Protocol emerges as a groundbreaking blockchain solution
         that seamlessly integrates Self-Sovereign Identity (SSI) into its core
         architecture, providing users with unprecedented control over their
         personal data and establishing a secure foundation for a multitude of
@@ -98,11 +98,11 @@
         identity verification processes, from birth and death registration to
         academic and professional journey tracking. This explanatory note delves
         into the core principles, technical aspects, and potential applications
-        of the Sovereign-T Protocol, showcasing its potential to reshape the
+        of the Sovereign-T<sup>3</sup> Protocol, showcasing its potential to reshape the
         landscape of identity management and decentralized applications.
       </p>
 
-      <h2>Why Sovereign-T?</h2>
+      <h2>Why Sovereign-T<sup>3</sup>?</h2>
       <p>
         The term "sovereignty" traditionally refers to the supreme authority or
         power to govern oneself without interference from external sources. In
@@ -156,28 +156,28 @@
         </li>
       </ol>
       <p>
-        Now, let's consider the term <em><strong>"Sovereign-T"</strong></em> where <em><strong>'T'</strong></em> stands for
+        Now, let's consider the term <em><strong>"Sovereign-T<sup>3</sup>"</strong></em> where <em><strong>'T'</strong></em> stands for
         <strong>Trust</strong>, <strong>Transparency</strong>, and
         <strong>Total Autonomy:</strong>
       </p>
       <ul>
         <li>
           <em><strong>Trust:</strong></em> Trust is fundamental to the concept
-          of sovereignty within the context of blockchain. Sovereign-T
+          of sovereignty within the context of blockchain. Sovereign-T<sup>3</sup>
           emphasizes the establishment of trust through the inherent features of
           blockchain, enabling participants to transact and interact with
           confidence.
         </li>
         <li>
           <em><strong>Transparency:</strong></em> Transparency is a key pillar
-          of Sovereign-T. The 'T' underscores the commitment to providing a
+          of Sovereign-T<sup>3</sup>. The 'T' underscores the commitment to providing a
           clear and open view of the network's operations, ensuring that
           participants can verify transactions and governance processes
           independently.
         </li>
         <li>
           <em><strong>Total Autonomy:</strong></em> The term "Total Autonomy" in
-          Sovereign-T reinforces the idea that participants have complete
+          Sovereign-T<sup>3</sup> reinforces the idea that participants have complete
           control and self-governance over their digital identities, assets, and
           interactions within the blockchain network. It encapsulates the
           essence of sovereignty in the digital realm.
@@ -185,7 +185,7 @@
       </ul>
       <p>
         In summary, the concept of sovereignty is deeply ingrained in blockchain
-        technology, and the term "Sovereign-T" further emphasizes the commitment
+        technology, and the term "Sovereign-T<sup>3</sup>" further emphasizes the commitment
         to autonomy, decentralization, trust, transparency, and total autonomy
         within the blockchain ecosystem.
       </p>
@@ -194,7 +194,7 @@
     <section>
       <h2>Introduction</h2>
       <p>
-        In the evolving landscape of blockchain technology, Sovereign-T Protocol
+        In the evolving landscape of blockchain technology, Sovereign-T<sup>3</sup> Protocol
         represents a paradigm shift by merging the capabilities of an Ethereum
         Virtual Machine (EVM) compatible blockchain with the transformative
         power of Self-Sovereign Identity. The integration of SSI within the
@@ -205,19 +205,19 @@
     </section>
 
     <section>
-      <h2>Key Components of Sovereign-T Protocol</h2>
+      <h2>Key Components of Sovereign-T<sup>3</sup> Protocol</h2>
       <ol>
         <li>
-          <em><strong>EVM Compatibility:</strong></em> Sovereign-T Protocol
+          <em><strong>EVM Compatibility:</strong></em> Sovereign-T<sup>3</sup> Protocol
           leverages the Ethereum Virtual Machine, allowing developers to
           seamlessly migrate existing Ethereum-based decentralized applications
-          (DApps) to the Sovereign-T blockchain. This compatibility ensures a
+          (DApps) to the Sovereign-T<sup>3</sup> blockchain. This compatibility ensures a
           familiar and robust development environment for the blockchain
           community, promoting rapid adoption and innovation.
         </li>
         <li>
           <em><strong>Self-Sovereign Identity (SSI):</strong></em> At the core
-          of Sovereign-T Protocol lies the implementation of Self-Sovereign
+          of Sovereign-T<sup>3</sup> Protocol lies the implementation of Self-Sovereign
           Identity principles. Users are provided with cryptographic keys that
           serve as the foundation for creating, updating, and controlling their
           identity. This decentralized identity model ensures user privacy,
@@ -225,7 +225,7 @@
         </li>
         <li>
           <em><strong>Decentralized Smart Contracts:</strong></em> Smart
-          contracts are a fundamental aspect of Sovereign-T Protocol,
+          contracts are a fundamental aspect of Sovereign-T<sup>3</sup> Protocol,
           facilitating automated and trustless execution of predefined rules.
           These contracts enable a wide array of applications, ranging from
           identity verification to complex financial transactions, to operate
@@ -238,7 +238,7 @@
       <h2>Technical Architecture</h2>
       <ol>
         <li>
-          <em><strong>Consensus Mechanism:</strong></em> Sovereign-T Protocol
+          <em><strong>Consensus Mechanism:</strong></em> Sovereign-T<sup>3</sup> Protocol
           employs a robust consensus mechanism, ensuring the integrity and
           security of the blockchain. The consensus mechanism may be based on
           Proof-of-Stake (PoS), Proof-of-Work (PoW), or a hybrid model,
@@ -254,7 +254,7 @@
         </li>
         <li>
           <em><strong>Data Encryption and Privacy:</strong></em> To uphold the
-          principles of SSI, Sovereign-T Protocol incorporates advanced
+          principles of SSI, Sovereign-T<sup>3</sup> Protocol incorporates advanced
           cryptographic techniques to encrypt and protect user data. This
           emphasis on privacy ensures that personal information remains
           confidential, and users have granular control over what information is
@@ -262,7 +262,7 @@
         </li>
         <li>
           <em><strong>Scalability:</strong></em> Recognizing the importance of
-          scalability in a blockchain network, Sovereign-T Protocol employs
+          scalability in a blockchain network, Sovereign-T<sup>3</sup> Protocol employs
           innovative solutions such as sharding or layer 2 scaling solutions.
           This ensures that the network can handle a growing number of users and
           transactions without compromising performance.
@@ -271,10 +271,10 @@
     </section>
 
     <section>
-      <h2>Applications of Sovereign-T Protocol</h2>
+      <h2>Applications of Sovereign-T<sup>3</sup> Protocol</h2>
       <ol>
         <li>
-          <em><strong>Identity Verification:</strong></em> The Sovereign-T
+          <em><strong>Identity Verification:</strong></em> The Sovereign-T<sup>3</sup>
           Protocol serves as a foundation for secure and efficient identity
           verification processes. From birth and death registration to academic
           and professional journey tracking, individuals can maintain a
@@ -283,14 +283,14 @@
         </li>
         <li>
           <em><strong>Membership Access and Credentials:</strong></em>
-          Organizations and membership-based entities can utilize Sovereign-T
+          Organizations and membership-based entities can utilize Sovereign-T<sup>3</sup>
           Protocol to manage access control and issue verifiable credentials.
           This can range from granting access to exclusive content to providing
           proof of membership qualifications, all while maintaining the privacy
           and security of the individual's identity.
         </li>
         <li>
-          <em><strong>Decentralized Finance (DeFi):</strong></em> Sovereign-T
+          <em><strong>Decentralized Finance (DeFi):</strong></em> Sovereign-T<sup>3</sup>
           Protocol opens the door for decentralized financial applications,
           enabling users to participate in a variety of financial services such
           as lending, borrowing, and trading. The secure and verifiable identity
@@ -300,7 +300,7 @@
         <li>
           <em><strong>Supply Chain Management:</strong></em> The blockchain's
           transparency and traceability features make it well-suited for supply
-          chain management. Sovereign-T Protocol can be utilized to track and
+          chain management. Sovereign-T<sup>3</sup> Protocol can be utilized to track and
           authenticate the origin and journey of products, ensuring
           accountability and mitigating the risks of fraud within the supply
           chain.
@@ -314,13 +314,13 @@
         <li>
           <em><strong>Regulatory Compliance:</strong></em> The implementation of
           SSI and its application in various sectors may face regulatory
-          challenges. Sovereign-T Protocol aims to work collaboratively with
+          challenges. Sovereign-T<sup>3</sup> Protocol aims to work collaboratively with
           regulators to ensure compliance with legal frameworks while preserving
           the principles of decentralized identity.
         </li>
         <li>
           <em><strong>User Adoption and Education:</strong></em>
-          The success of Sovereign-T Protocol relies on widespread user adoption
+          The success of Sovereign-T<sup>3</sup> Protocol relies on widespread user adoption
           and understanding of the benefits of self-sovereign identity.
           Educational initiatives and user-friendly interfaces are essential to
           bridge the knowledge gap and encourage individuals and organizations
@@ -332,12 +332,12 @@
     <section>
       <h2>Conclusion</h2>
       <p>
-        Sovereign-T Protocol represents a bold step towards a decentralized
+        Sovereign-T<sup>3</sup> Protocol represents a bold step towards a decentralized
         future where individuals have control over their digital identities. By
         combining the strengths of an EVM-compatible blockchain with the
         principles of Self-Sovereign Identity, the protocol opens up a myriad of
         possibilities for secure, transparent, and privacy-centric applications.
-        As the blockchain ecosystem continues to evolve, Sovereign-T Protocol
+        As the blockchain ecosystem continues to evolve, Sovereign-T<sup>3</sup> Protocol
         stands at the forefront, pioneering a new era in identity management and
         decentralized applications.
       </p>
@@ -346,11 +346,11 @@
     <section>
       <h2>Inspiration & Credits</h2>
       <p>
-        The development of the Sovereign-T Protocol has been significantly
+        The development of the Sovereign-T<sup>3</sup> Protocol has been significantly
         influenced by key concepts explored in several notable books related to
         Self-Sovereign Identity (SSI) and blockchain technology. The following
         works have played a crucial role in shaping the ideas and principles
-        behind the Sovereign-T network:
+        behind the Sovereign-T<sup>3</sup> network:
       </p>
       <ol>
         <li>
@@ -379,7 +379,7 @@
       <h3>Whitepaper coming soon!</h3>
     </section>
     <footer>
-      <p>&copy; Sovereign-T Protocol</p>
+      <p>&copy; Sovereign-T<sup>3</sup> Protocol</p>
     </footer>
   </body>
 </html>
