--- a/index.html
+++ b/index.html
@@ -89,17 +89,18 @@
     <section>
       <h2>Abstract</h2>
       <p>
-        Sovereign-T<sup>3</sup> Protocol emerges as a groundbreaking blockchain solution
-        that seamlessly integrates Self-Sovereign Identity (SSI) into its core
-        architecture, providing users with unprecedented control over their
-        personal data and establishing a secure foundation for a multitude of
-        applications. This EVM-compatible blockchain fosters a decentralized
+        Sovereign-T<sup>3</sup> Protocol emerges as a groundbreaking blockchain
+        solution that seamlessly integrates Self-Sovereign Identity (SSI) into
+        its core architecture, providing users with unprecedented control over
+        their personal data and establishing a secure foundation for a multitude
+        of applications. This EVM-compatible blockchain fosters a decentralized
         ecosystem where smart contracts play a pivotal role in revolutionizing
         identity verification processes, from birth and death registration to
         academic and professional journey tracking. This explanatory note delves
         into the core principles, technical aspects, and potential applications
-        of the Sovereign-T<sup>3</sup> Protocol, showcasing its potential to reshape the
-        landscape of identity management and decentralized applications.
+        of the Sovereign-T<sup>3</sup> Protocol, showcasing its potential to
+        reshape the landscape of identity management and decentralized
+        applications.
       </p>
 
       <h2>Why Sovereign-T<sup>3</sup>?</h2>
@@ -156,51 +157,58 @@
         </li>
       </ol>
       <p>
-        Now, let's consider the term <em><strong>"Sovereign-T<sup>3</sup>"</strong></em> where <em><strong>'T'</strong></em> stands for
-        <strong>Trust</strong>, <strong>Transparency</strong>, and
+        Now, let's consider the term
+        <em><strong>"Sovereign-T<sup>3</sup>"</strong></em> where
+        <em><strong>'T'</strong></em> stands for <strong>Trust</strong>,
+        <strong>Transparency</strong>, and
         <strong>Total Autonomy:</strong>
       </p>
       <ul>
         <li>
           <em><strong>Trust:</strong></em> Trust is fundamental to the concept
-          of sovereignty within the context of blockchain. Sovereign-T<sup>3</sup>
+          of sovereignty within the context of blockchain. Sovereign-T<sup
+            >3</sup
+          >
           emphasizes the establishment of trust through the inherent features of
           blockchain, enabling participants to transact and interact with
           confidence.
         </li>
         <li>
           <em><strong>Transparency:</strong></em> Transparency is a key pillar
-          of Sovereign-T<sup>3</sup>. The 'T' underscores the commitment to providing a
-          clear and open view of the network's operations, ensuring that
-          participants can verify transactions and governance processes
+          of Sovereign-T<sup>3</sup>. The 'T' underscores the commitment to
+          providing a clear and open view of the network's operations, ensuring
+          that participants can verify transactions and governance processes
           independently.
         </li>
         <li>
           <em><strong>Total Autonomy:</strong></em> The term "Total Autonomy" in
-          Sovereign-T<sup>3</sup> reinforces the idea that participants have complete
-          control and self-governance over their digital identities, assets, and
-          interactions within the blockchain network. It encapsulates the
-          essence of sovereignty in the digital realm.
+          Sovereign-T<sup>3</sup> reinforces the idea that participants have
+          complete control and self-governance over their digital identities,
+          assets, and interactions within the blockchain network. It
+          encapsulates the essence of sovereignty in the digital realm.
         </li>
       </ul>
       <p>
         In summary, the concept of sovereignty is deeply ingrained in blockchain
-        technology, and the term "Sovereign-T<sup>3</sup>" further emphasizes the commitment
-        to autonomy, decentralization, trust, transparency, and total autonomy
-        within the blockchain ecosystem.
+        technology, and the term "Sovereign-T<sup>3</sup>" further emphasizes
+        the commitment to autonomy, decentralization, trust, transparency, and
+        total autonomy within the blockchain ecosystem.
       </p>
     </section>
 
     <section>
       <h2>Introduction</h2>
       <p>
-        In the evolving landscape of blockchain technology, Sovereign-T<sup>3</sup> Protocol
-        represents a paradigm shift by merging the capabilities of an Ethereum
-        Virtual Machine (EVM) compatible blockchain with the transformative
-        power of Self-Sovereign Identity. The integration of SSI within the
-        blockchain architecture empowers individuals with ownership and control
-        over their digital identities, eliminating the need for centralized
-        authorities to validate and authenticate personal information.
+        In the evolving landscape of blockchain technology, Sovereign-T<sup
+          >3</sup
+        >
+        Protocol represents a paradigm shift by merging the capabilities of an
+        Ethereum Virtual Machine (EVM) compatible blockchain with the
+        transformative power of Self-Sovereign Identity. The integration of SSI
+        within the blockchain architecture empowers individuals with ownership
+        and control over their digital identities, eliminating the need for
+        centralized authorities to validate and authenticate personal
+        information.
       </p>
     </section>
 
@@ -208,28 +216,81 @@
       <h2>Key Components of Sovereign-T<sup>3</sup> Protocol</h2>
       <ol>
         <li>
-          <em><strong>EVM Compatibility:</strong></em> Sovereign-T<sup>3</sup> Protocol
-          leverages the Ethereum Virtual Machine, allowing developers to
-          seamlessly migrate existing Ethereum-based decentralized applications
-          (DApps) to the Sovereign-T<sup>3</sup> blockchain. This compatibility ensures a
-          familiar and robust development environment for the blockchain
-          community, promoting rapid adoption and innovation.
+          <em><strong>EVM Compatibility:</strong></em> Sovereign-T<sup>3</sup>
+          Protocol leverages the Ethereum Virtual Machine, allowing developers
+          to seamlessly migrate existing Ethereum-based decentralized
+          applications (DApps) to the Sovereign-T<sup>3</sup> blockchain. This
+          compatibility ensures a familiar and robust development environment
+          for the blockchain community, promoting rapid adoption and innovation.
         </li>
         <li>
           <em><strong>Self-Sovereign Identity (SSI):</strong></em> At the core
-          of Sovereign-T<sup>3</sup> Protocol lies the implementation of Self-Sovereign
-          Identity principles. Users are provided with cryptographic keys that
-          serve as the foundation for creating, updating, and controlling their
-          identity. This decentralized identity model ensures user privacy,
-          security, and interoperability across various applications.
+          of Sovereign-T<sup>3</sup> Protocol lies the implementation of
+          Self-Sovereign Identity principles. Users are provided with
+          cryptographic keys that serve as the foundation for creating,
+          updating, and controlling their identity. This decentralized identity
+          model ensures user privacy, security, and interoperability across
+          various applications. Core benefits of SSI integrated into a
+          blockchain architecture are:
         </li>
+        <ul>
+          <li>
+            Verifiable Credentials—support flexible proof mechanisms to ensure
+            the credentials are cryptographically reliable and that the issuing
+            institution stands by the statements contained therein and suspends
+            or revokes issued credentials if necessary.
+          </li>
+          <li>
+            Decentralized Identifiers—provide a means for both institutions and
+            learners to establish identity without reliance on a centralized
+            party.
+          </li>
+          <li>
+            Decentralized Verifiable Data Registries—publish the status of
+            suspended or revoked credentials without requiring verifiers to
+            contact the original issuing authority.
+          </li>
+          <li>
+            Privacy-Promoting Credential Status Checks—inspect the current
+            status of a credential without revealing any additional personally
+            correlatable data about the individual.
+          </li>
+          <li>
+            Personal Data Stores—provide standards and protocols to support
+            individual control over sharing and access to their data.
+          </li>
+          <li>
+            Selective Disclosure—allow an individual the option to share parts
+            of a larger data set.
+          </li>
+          <li>
+            Elective Computation—ensure that any processing of an individual’s
+            information is explicitly requested.
+          </li>
+          <li>
+            Progressive Disclosure—share the minimal amount of information
+            initially and gradually share more information as the value
+            proposition becomes clearer, rapport is built, and trust is
+            developed.
+          </li>
+          <li>
+            Embedded Identity Proofing Attributes—include personally
+            identifiable information directly in a credential, only when
+            necessary and appropriate, to ensure usefulness of these standards
+            with digital identity frameworks.
+          </li>
+          <li>
+            Minimizing Collected Data—request the absolute minimum information
+            for any particular transaction.
+          </li>
+        </ul>
         <li>
           <em><strong>Decentralized Smart Contracts:</strong></em> Smart
-          contracts are a fundamental aspect of Sovereign-T<sup>3</sup> Protocol,
-          facilitating automated and trustless execution of predefined rules.
-          These contracts enable a wide array of applications, ranging from
-          identity verification to complex financial transactions, to operate
-          within the decentralized ecosystem securely.
+          contracts are a fundamental aspect of Sovereign-T<sup>3</sup>
+          Protocol, facilitating automated and trustless execution of predefined
+          rules. These contracts enable a wide array of applications, ranging
+          from identity verification to complex financial transactions, to
+          operate within the decentralized ecosystem securely.
         </li>
       </ol>
     </section>
@@ -238,10 +299,10 @@
       <h2>Technical Architecture</h2>
       <ol>
         <li>
-          <em><strong>Consensus Mechanism:</strong></em> Sovereign-T<sup>3</sup> Protocol
-          employs a robust consensus mechanism, ensuring the integrity and
-          security of the blockchain. The consensus mechanism may be based on
-          Proof-of-Stake (PoS), Proof-of-Work (PoW), or a hybrid model,
+          <em><strong>Consensus Mechanism:</strong></em> Sovereign-T<sup>3</sup>
+          Protocol employs a robust consensus mechanism, ensuring the integrity
+          and security of the blockchain. The consensus mechanism may be based
+          on Proof-of-Stake (PoS), Proof-of-Work (PoW), or a hybrid model,
           providing flexibility based on the specific requirements and goals of
           the blockchain network.
         </li>
@@ -254,18 +315,18 @@
         </li>
         <li>
           <em><strong>Data Encryption and Privacy:</strong></em> To uphold the
-          principles of SSI, Sovereign-T<sup>3</sup> Protocol incorporates advanced
-          cryptographic techniques to encrypt and protect user data. This
-          emphasis on privacy ensures that personal information remains
+          principles of SSI, Sovereign-T<sup>3</sup> Protocol incorporates
+          advanced cryptographic techniques to encrypt and protect user data.
+          This emphasis on privacy ensures that personal information remains
           confidential, and users have granular control over what information is
           shared and with whom.
         </li>
         <li>
           <em><strong>Scalability:</strong></em> Recognizing the importance of
-          scalability in a blockchain network, Sovereign-T<sup>3</sup> Protocol employs
-          innovative solutions such as sharding or layer 2 scaling solutions.
-          This ensures that the network can handle a growing number of users and
-          transactions without compromising performance.
+          scalability in a blockchain network, Sovereign-T<sup>3</sup> Protocol
+          employs innovative solutions such as sharding or layer 2 scaling
+          solutions. This ensures that the network can handle a growing number
+          of users and transactions without compromising performance.
         </li>
       </ol>
     </section>
@@ -274,7 +335,9 @@
       <h2>Applications of Sovereign-T<sup>3</sup> Protocol</h2>
       <ol>
         <li>
-          <em><strong>Identity Verification:</strong></em> The Sovereign-T<sup>3</sup>
+          <em><strong>Identity Verification:</strong></em> The Sovereign-T<sup
+            >3</sup
+          >
           Protocol serves as a foundation for secure and efficient identity
           verification processes. From birth and death registration to academic
           and professional journey tracking, individuals can maintain a
@@ -283,14 +346,16 @@
         </li>
         <li>
           <em><strong>Membership Access and Credentials:</strong></em>
-          Organizations and membership-based entities can utilize Sovereign-T<sup>3</sup>
+          Organizations and membership-based entities can utilize
+          Sovereign-T<sup>3</sup>
           Protocol to manage access control and issue verifiable credentials.
           This can range from granting access to exclusive content to providing
           proof of membership qualifications, all while maintaining the privacy
           and security of the individual's identity.
         </li>
         <li>
-          <em><strong>Decentralized Finance (DeFi):</strong></em> Sovereign-T<sup>3</sup>
+          <em><strong>Decentralized Finance (DeFi):</strong></em>
+          Sovereign-T<sup>3</sup>
           Protocol opens the door for decentralized financial applications,
           enabling users to participate in a variety of financial services such
           as lending, borrowing, and trading. The secure and verifiable identity
@@ -300,8 +365,8 @@
         <li>
           <em><strong>Supply Chain Management:</strong></em> The blockchain's
           transparency and traceability features make it well-suited for supply
-          chain management. Sovereign-T<sup>3</sup> Protocol can be utilized to track and
-          authenticate the origin and journey of products, ensuring
+          chain management. Sovereign-T<sup>3</sup> Protocol can be utilized to
+          track and authenticate the origin and journey of products, ensuring
           accountability and mitigating the risks of fraud within the supply
           chain.
         </li>
@@ -314,17 +379,17 @@
         <li>
           <em><strong>Regulatory Compliance:</strong></em> The implementation of
           SSI and its application in various sectors may face regulatory
-          challenges. Sovereign-T<sup>3</sup> Protocol aims to work collaboratively with
-          regulators to ensure compliance with legal frameworks while preserving
-          the principles of decentralized identity.
+          challenges. Sovereign-T<sup>3</sup> Protocol aims to work
+          collaboratively with regulators to ensure compliance with legal
+          frameworks while preserving the principles of decentralized identity.
         </li>
         <li>
           <em><strong>User Adoption and Education:</strong></em>
-          The success of Sovereign-T<sup>3</sup> Protocol relies on widespread user adoption
-          and understanding of the benefits of self-sovereign identity.
-          Educational initiatives and user-friendly interfaces are essential to
-          bridge the knowledge gap and encourage individuals and organizations
-          to embrace the new paradigm.
+          The success of Sovereign-T<sup>3</sup> Protocol relies on widespread
+          user adoption and understanding of the benefits of self-sovereign
+          identity. Educational initiatives and user-friendly interfaces are
+          essential to bridge the knowledge gap and encourage individuals and
+          organizations to embrace the new paradigm.
         </li>
       </ol>
     </section>
@@ -332,25 +397,25 @@
     <section>
       <h2>Conclusion</h2>
       <p>
-        Sovereign-T<sup>3</sup> Protocol represents a bold step towards a decentralized
-        future where individuals have control over their digital identities. By
-        combining the strengths of an EVM-compatible blockchain with the
-        principles of Self-Sovereign Identity, the protocol opens up a myriad of
-        possibilities for secure, transparent, and privacy-centric applications.
-        As the blockchain ecosystem continues to evolve, Sovereign-T<sup>3</sup> Protocol
-        stands at the forefront, pioneering a new era in identity management and
-        decentralized applications.
+        Sovereign-T<sup>3</sup> Protocol represents a bold step towards a
+        decentralized future where individuals have control over their digital
+        identities. By combining the strengths of an EVM-compatible blockchain
+        with the principles of Self-Sovereign Identity, the protocol opens up a
+        myriad of possibilities for secure, transparent, and privacy-centric
+        applications. As the blockchain ecosystem continues to evolve,
+        Sovereign-T<sup>3</sup> Protocol stands at the forefront, pioneering a
+        new era in identity management and decentralized applications.
       </p>
     </section>
 
     <section>
       <h2>Inspiration & Credits</h2>
       <p>
-        The development of the Sovereign-T<sup>3</sup> Protocol has been significantly
-        influenced by key concepts explored in several notable books related to
-        Self-Sovereign Identity (SSI) and blockchain technology. The following
-        works have played a crucial role in shaping the ideas and principles
-        behind the Sovereign-T<sup>3</sup> network:
+        The development of the Sovereign-T<sup>3</sup> Protocol has been
+        significantly influenced by key concepts explored in several notable
+        books related to Self-Sovereign Identity (SSI) and blockchain
+        technology. The following works have played a crucial role in shaping
+        the ideas and principles behind the Sovereign-T<sup>3</sup> network:
       </p>
       <ol>
         <li>
