--- a/index.html
+++ b/index.html
@@ -235,53 +235,77 @@
         </li>
         <ul>
           <li>
-            Verifiable Credentials—support flexible proof mechanisms to ensure
-            the credentials are cryptographically reliable and that the issuing
-            institution stands by the statements contained therein and suspends
-            or revokes issued credentials if necessary.
+            <h3>Advanced Credential Verification</h3>
+            <p>
+              Elevate the reliability of credentials with flexible proof
+              mechanisms, ensuring cryptographic validity and swift suspension
+              or revocation when needed.
+            </p>
           </li>
           <li>
-            Decentralized Identifiers—provide a means for both institutions and
-            learners to establish identity without reliance on a centralized
-            party.
+            <h3>Decentralized Identity Establishment</h3>
+            <p>
+              Empower institutions and learners to assert identity autonomously,
+              breaking free from reliance on centralized authorities.
+            </p>
           </li>
           <li>
-            Decentralized Verifiable Data Registries—publish the status of
-            suspended or revoked credentials without requiring verifiers to
-            contact the original issuing authority.
+            <h3>Efficient Verifiable Data Registries</h3>
+            <p>
+              Revolutionize the status tracking of credentials with
+              decentralized registries, eliminating the need for contacting
+              issuing authorities.
+            </p>
           </li>
           <li>
-            Privacy-Promoting Credential Status Checks—inspect the current
-            status of a credential without revealing any additional personally
-            correlatable data about the individual.
+            <h3>Privacy-Centric Credential Status Checks</h3>
+            <p>
+              Safeguard individual privacy during credential verification,
+              allowing thorough checks without compromising personal data.
+            </p>
           </li>
           <li>
-            Personal Data Stores—provide standards and protocols to support
-            individual control over sharing and access to their data.
+            <h3>Empowering Personal Data Management</h3>
+            <p>
+              Take control of your data with standards supporting individual
+              authority over data sharing and access.
+            </p>
           </li>
           <li>
-            Selective Disclosure—allow an individual the option to share parts
-            of a larger data set.
+            <h3>Selective Data Disclosure</h3>
+            <p>
+              Grant individuals the freedom to share specific portions of a
+              larger dataset, putting them in control of their information.
+            </p>
           </li>
           <li>
-            Elective Computation—ensure that any processing of an individual’s
-            information is explicitly requested.
+            <h3>User-Initiated Data Processing</h3>
+            <p>
+              Put individuals in control by allowing them to explicitly request
+              any computation of their data, ensuring privacy and consent.
+            </p>
           </li>
           <li>
-            Progressive Disclosure—share the minimal amount of information
-            initially and gradually share more information as the value
-            proposition becomes clearer, rapport is built, and trust is
-            developed.
+            <h3>Progressive Information Sharing</h3>
+            <p>
+              Redefine information sharing with a progressive disclosure model,
+              starting with the minimum required and gradually increasing
+              disclosure.
+            </p>
           </li>
           <li>
-            Embedded Identity Proofing Attributes—include personally
-            identifiable information directly in a credential, only when
-            necessary and appropriate, to ensure usefulness of these standards
-            with digital identity frameworks.
+            <h3>Strategic Identity Proofing</h3>
+            <p>
+              Integrate personally identifiable information judiciously within
+              credentials, enhancing utility within digital identity frameworks.
+            </p>
           </li>
           <li>
-            Minimizing Collected Data—request the absolute minimum information
-            for any particular transaction.
+            <h3>Minimal Data Collection Practices</h3>
+            <p>
+              Uphold privacy principles by collecting only the absolute minimum
+              information required for any transaction.
+            </p>
           </li>
         </ul>
         <li>
