--- a/index.html
+++ b/index.html
@@ -235,77 +235,54 @@
         </li>
         <ul>
           <li>
-            <h3>Advanced Credential Verification</h3>
-            <p>
-              Elevate the reliability of credentials with flexible proof
-              mechanisms, ensuring cryptographic validity and swift suspension
-              or revocation when needed.
-            </p>
+            Advanced Credential Verification - Elevate the reliability of
+            credentials with flexible proof mechanisms, ensuring cryptographic
+            validity and swift suspension or revocation when needed.
           </li>
           <li>
-            <h3>Decentralized Identity Establishment</h3>
-            <p>
-              Empower institutions and learners to assert identity autonomously,
-              breaking free from reliance on centralized authorities.
-            </p>
+            Decentralized Identity Establishment - Empower institutions and
+            learners to assert identity autonomously, breaking free from
+            reliance on centralized authorities.
           </li>
           <li>
-            <h3>Efficient Verifiable Data Registries</h3>
-            <p>
-              Revolutionize the status tracking of credentials with
-              decentralized registries, eliminating the need for contacting
-              issuing authorities.
-            </p>
+            Efficient Verifiable Data Registries - Revolutionize the status
+            tracking of credentials with decentralized registries, eliminating
+            the need for contacting issuing authorities.
           </li>
           <li>
-            <h3>Privacy-Centric Credential Status Checks</h3>
-            <p>
-              Safeguard individual privacy during credential verification,
-              allowing thorough checks without compromising personal data.
-            </p>
+            Privacy-Centric Credential Status Checks - Safeguard individual
+            privacy during credential verification, allowing thorough checks
+            without compromising personal data.
           </li>
           <li>
-            <h3>Empowering Personal Data Management</h3>
-            <p>
-              Take control of your data with standards supporting individual
-              authority over data sharing and access.
-            </p>
+            Empowering Personal Data Management - Take control of your data with
+            standards supporting individual authority over data sharing and
+            access.
           </li>
           <li>
-            <h3>Selective Data Disclosure</h3>
-            <p>
-              Grant individuals the freedom to share specific portions of a
-              larger dataset, putting them in control of their information.
-            </p>
+            Selective Data Disclosure - Grant individuals the freedom to share
+            specific portions of a larger dataset, putting them in control of
+            their information.
           </li>
           <li>
-            <h3>User-Initiated Data Processing</h3>
-            <p>
-              Put individuals in control by allowing them to explicitly request
-              any computation of their data, ensuring privacy and consent.
-            </p>
+            User-Initiated Data Processing - Put individuals in control by
+            allowing them to explicitly request any computation of their data,
+            ensuring privacy and consent.
           </li>
           <li>
-            <h3>Progressive Information Sharing</h3>
-            <p>
-              Redefine information sharing with a progressive disclosure model,
-              starting with the minimum required and gradually increasing
-              disclosure.
-            </p>
+            Progressive Information Sharing - Redefine information sharing with
+            a progressive disclosure model, starting with the minimum required
+            and gradually increasing disclosure.
           </li>
           <li>
-            <h3>Strategic Identity Proofing</h3>
-            <p>
-              Integrate personally identifiable information judiciously within
-              credentials, enhancing utility within digital identity frameworks.
-            </p>
+            Strategic Identity Proofing - Integrate personally identifiable
+            information judiciously within credentials, enhancing utility within
+            digital identity frameworks.
           </li>
           <li>
-            <h3>Minimal Data Collection Practices</h3>
-            <p>
-              Uphold privacy principles by collecting only the absolute minimum
-              information required for any transaction.
-            </p>
+            Minimal Data Collection Practices - Uphold privacy principles by
+            collecting only the absolute minimum information required for any
+            transaction.
           </li>
         </ul>
         <li>
