--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
           to seamlessly migrate existing Ethereum-based decentralized
           applications (DApps) to the Sovereign-T<sup>3</sup> blockchain. This
           compatibility ensures a familiar and robust development environment
-          for the blockchain community, promoting rapid adoption and innovation.
+          for the blockchain community, promoting rapid adoption and innovation
+          along with interoperability.
         </li>
         <li>
           <em><strong>Self-Sovereign Identity (SSI):</strong></em> At the core
@@ -291,8 +292,74 @@
           Protocol, facilitating automated and trustless execution of predefined
           rules. These contracts enable a wide array of applications, ranging
           from identity verification to complex financial transactions, to
-          operate within the decentralized ecosystem securely.
+          operate within the decentralized ecosystem securely. Here are key
+          insights into how decentralized smart contracts aid in building such
+          an architecture:
         </li>
+        <ul>
+          <li>
+            Immutable Identity Records - Smart contracts on the blockchain
+            provide a tamper-proof and immutable ledger for recording
+            identity-related transactions. SSI relies on the permanence and
+            integrity of identity data, and smart contracts ensure that once
+            information is recorded, it cannot be altered or deleted without
+            consensus from the network.
+          </li>
+          <li>
+            Self-Executing Identity Transactions - Smart contracts enable
+            self-executing identity transactions, automating various aspects of
+            identity management. For instance, a smart contract can
+            automatically update a user's credentials when they achieve a
+            milestone or complete a degree or acquire a technical qualification.
+            This automation reduces the reliance on manual processes and
+            enhances the efficiency of identity updates.
+          </li>
+          <li>
+            Selective Disclosure and Privacy-Preserving Transactions - Smart
+            contracts allow for the implementation of selective disclosure
+            mechanisms. Users can execute smart contracts to selectively
+            disclose specific identity attributes or credentials, maintaining
+            control over the information they share without revealing
+            unnecessary details. This supports the privacy-centric nature of
+            SSI.
+          </li>
+          <li>
+            Decentralized Governance and Revocation - Smart contracts enable
+            decentralized governance models for identity management. The
+            community or network participants can collectively decide on the
+            rules and policies governing identity issuance, updates, and
+            revocation. If the need arises to suspend or revoke a credential,
+            the decision-making process can be executed through smart contracts,
+            promoting transparency and fairness.
+          </li>
+          <li>
+            Interoperability and Standardization - Smart contracts can be
+            programmed to adhere to identity-related standards and protocols,
+            fostering interoperability between different SSI-enabled systems.
+            This ensures that decentralized identities and credentials issued on
+            one blockchain can be recognized and accepted by others, creating a
+            more connected and versatile identity ecosystem.
+          </li>
+          <li>
+            Event-Driven Identity Updates - Decentralized smart contracts can be
+            triggered by specific events, such as a change in employment status
+            or completion of a certification. This event-driven model ensures
+            that identity updates occur in response to real-world changes,
+            keeping the identity information current and accurate.
+          </li>
+          <li>
+            Decentralized & Trustless Credential Verification - The trustless
+            and decentralized nature of smart contracts ensures that credential
+            verification can occur without the need for intermediaries or
+            trusted third parties. This aligns with the core principle of
+            trustlessness in blockchain technology and enhances the security and
+            reliability of the identity verification process. Instead of relying
+            on a central authority for verification, smart contracts can enable
+            a consensus-based approach where multiple parties in the network
+            validate the presented credentials, enhancing the overall
+            trustworthiness of the identity.
+          </li>
+        </ul>
       </ol>
     </section>
 
