--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <header>
       <h1>Sovereign-T<sup>3</sup> Protocol : A brief introduction</h1>
     </header>
+    <p>Updated on 03.01.2024</p>
 
     <section>
       <h2>Abstract</h2>
