--- a/index.html
+++ b/index.html
@@ -506,6 +506,35 @@
           discusses the changing landscape of identity in the digital age and
           touches upon blockchain and SSI.
         </li>
+        <li>
+          <em
+            ><strong
+              >"A Comprehensive Guide to Self Sovereign Identity" by Heather
+              Vescent & Kaliya Young:</strong
+            ></em
+          >
+          Heather Vescent, with her extensive experience in future forecasting
+          and strategic intelligence, and Kaliya Young, known for her deep
+          involvement in identity management, bring together a wealth of
+          knowledge and expertise. Their collaboration offers a detailed and
+          nuanced perspective on SSI, which empowers individuals to control
+          their own digital identities without relying on centralized
+          authorities.
+        </li>
+        <li>
+          <em
+            ><strong
+              >"Blockchain for Self Sovereign Digital Identity" by Debajani
+              Mohanty:</strong
+            ></em
+          >
+          It is a pivotal text that dives into the intricate relationship
+          between blockchain technology and the concept of self-sovereign
+          identity (SSI). Debajani Mohanty, recognized for her expertise in
+          blockchain technology, offers valuable insights into how blockchain
+          can be a foundational element in developing self-sovereign digital
+          identities.
+        </li>
       </ol>
     </section>
 
