--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <p>
         In summary, the concept of sovereignty is deeply ingrained in blockchain
         technology, and the term "Sovereign-T<sup>3</sup>" further emphasizes
-        the commitment to autonomy, decentralization, trust, transparency, and
+        the commitment to decentralized trustless environment, transparency, and
         total autonomy within the blockchain ecosystem.
       </p>
     </section>
