--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
 
     <section>
       <h3>Whitepaper coming soon!</h3>
+      <p>For any queries and partnership proposal, send us an email to <a href="mailto:contact@sovereignty.one">contact@sovereignty.one</a></p>
     </section>
     <footer>
       <p>&copy; Sovereign-T<sup>3</sup> Protocol</p>
