--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <header>
       <h1>Sovereign-T<sup>3</sup> Protocol : A brief introduction</h1>
     </header>
-    <p>Updated on 04.01.2024</p>
+    <p>Updated on 05.01.2024</p>
 
     <section>
       <h2>Abstract</h2>
@@ -103,6 +103,51 @@
         reshape the landscape of identity management and decentralized
         applications.
       </p>
+      <h2>
+        10 Core Principles of Self-Sovereign Idenittiy (Christopher Allen)
+      </h2>
+      <p>
+        "The 10 Principles of Self-Sovereign Identity (SSI)" provide a
+        foundational framework for Sovereing-T<sup>3</sup> Protocol as well as
+        understanding and implementing self-sovereign identity. These principles
+        are designed to guide the development of systems that put users in
+        control of their digital identities, ensuring privacy, security, and
+        full personal autonomy. Here's a detailed explanation of each principle:
+      </p>
+      <ol>
+        <li>
+          <strong>Existence</strong>: Individuals must have an independent
+          existence.
+        </li>
+        <li><strong>Control</strong>: Users must control their identities.</li>
+        <li>
+          <strong>Access</strong>: Users must have access to their own data.
+        </li>
+        <li>
+          <strong>Transparency</strong>: Systems and algorithms must be
+          transparent.
+        </li>
+        <li><strong>Persistence</strong>: Identities must be long-lived.</li>
+        <li>
+          <strong>Portability</strong>: Information and services about identity
+          must be transportable.
+        </li>
+        <li>
+          <strong>Interoperability</strong>: Identities should be as widely
+          usable as possible.
+        </li>
+        <li>
+          <strong>Consent</strong>: Users must consent to the use of their
+          identity.
+        </li>
+        <li>
+          <strong>Minimalization</strong>: Disclosure of claims must be
+          minimized.
+        </li>
+        <li>
+          <strong>Protection</strong>: The rights of users must be protected.
+        </li>
+      </ol>
 
       <h2>Why Sovereign-T<sup>3</sup>?</h2>
       <p>
@@ -630,7 +675,10 @@
 
     <section>
       <h3>Whitepaper coming soon!</h3>
-      <p>For any queries and partnership proposal, send us an email to <a href="mailto:contact@sovereignty.one">contact@sovereignty.one</a></p>
+      <p>
+        For any queries and partnership proposal, send us an email to
+        <a href="mailto:contact@sovereignty.one">contact@sovereignty.one</a>
+      </p>
     </section>
     <footer>
       <p>&copy; Sovereign-T<sup>3</sup> Protocol</p>
