--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         reshape the landscape of identity management and decentralized
         applications.
       </p>
-      <h2>
-        10 Core Principles of Self-Sovereign Idenittiy (Christopher Allen)
-      </h2>
+      <h3>
+        10 Core Principles of Self-Sovereign Identity (Christopher Allen)
+      </h3>
       <p>
         "The 10 Principles of Self-Sovereign Identity (SSI)" provide a
         foundational framework for Sovereing-T<sup>3</sup> Protocol as well as
