--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       body {
         font-family: "Arial", sans-serif;
         line-height: 1.6;
-        margin: 20px;
+        margin: 10 auto;
+        max-width: 920px;
       }
 
       h1,
