--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       body {
         font-family: "Arial", sans-serif;
         line-height: 1.6;
-        margin: 10 auto;
+        margin: 10 auto!important;
         max-width: 920px;
       }
 
