--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
         max-width: 920px;
       }
 
+      @media (max-width: 500px) {
+        body{
+          margin: 10px 15px;
+        }
+
+        img{
+          max-width: 250px;
+        }
+      }
+
       h1,
       h2,
       h3 {
