--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         max-width: 920px;
       }
 
-      @media (max-width: 500px) {
+      @media (max-width: 540px) {
         body{
-          margin: 10px 15px;
+          margin: 10px;
         }
 
         img{
-          max-width: 250px;
+          max-width: 260px;
         }
       }
 
